--- a/apps/web/styled-system/styles.css
+++ b/apps/web/styled-system/styles.css
@@ -993,10 +993,6 @@
     margin-right: var(--spacing-2)
     }
 
-  .z_50 {
-    z-index: 50
-    }
-
   .touch_none {
     touch-action: none
     }
@@ -1063,10 +1059,6 @@
 
   .pt_4 {
     padding-top: var(--spacing-4)
-    }
-
-  .bg_transparent {
-    background: var(--colors-transparent)
     }
 
   .opacity_0\.3 {
@@ -2132,8 +2124,28 @@
     color: var(--colors-purple-700)
     }
 
-  .border_none {
-    border: var(--borders-none)
+  .z_30 {
+    z-index: 30
+    }
+
+  .pos_absolute {
+    position: absolute
+    }
+
+  .top_100\% {
+    top: 100%
+    }
+
+  .left_50\% {
+    left: 50%
+    }
+
+  .transform_translateX\(-50\%\) {
+    transform: translateX(-50%)
+    }
+
+  .z_20 {
+    z-index: 20
     }
 
   .fs_md {
@@ -2308,28 +2320,12 @@
     transition: opacity 0.2s ease
     }
 
-  .z_30 {
-    z-index: 30
+  .z_50 {
+    z-index: 50
     }
 
   .pos_relative {
     position: relative
-    }
-
-  .pos_absolute {
-    position: absolute
-    }
-
-  .top_100\% {
-    top: 100%
-    }
-
-  .left_50\% {
-    left: 50%
-    }
-
-  .transform_translateX\(-50\%\) {
-    transform: translateX(-50%)
     }
 
   .mt_1 {
@@ -2352,8 +2348,8 @@
     box-shadow: var(--shadows-md)
     }
 
-  .z_20 {
-    z-index: 20
+  .z_100 {
+    z-index: 100
     }
 
   .min-w_150px {
@@ -2386,6 +2382,14 @@
 
   .fs_sm {
     font-size: var(--font-sizes-sm)
+    }
+
+  .border_none {
+    border: var(--borders-none)
+    }
+
+  .bg_transparent {
+    background: var(--colors-transparent)
     }
 
   .cursor_not-allowed {
